[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/CityMap.gd" type="Script" id=1]
[ext_resource path="res://img/CityMap.jpg" type="Texture" id=2]
[ext_resource path="res://img/icons/to1s.png" type="Texture" id=3]
[ext_resource path="res://img/icons/to1sp.png" type="Texture" id=4]
[ext_resource path="res://img/bazaar.png" type="Texture" id=5]
[ext_resource path="res://img/bazaarb.png" type="Texture" id=6]
[ext_resource path="res://img/icons/to2s.png" type="Texture" id=7]
[ext_resource path="res://img/icons/to3s.png" type="Texture" id=8]
[ext_resource path="res://img/icons/to3sp.png" type="Texture" id=9]
[ext_resource path="res://img/AUS.png" type="Texture" id=10]
[ext_resource path="res://img/AUN.png" type="Texture" id=11]
[ext_resource path="res://scenes/bazaar.tscn" type="PackedScene" id=12]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 269.0
margin/right = 583.0
margin/bottom = 329.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="FSMarket" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 333.0
margin/right = 703.0
margin/bottom = 373.0
alignment = 0

[node name="Merchant0" type="TextureButton" parent="FSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant1" type="TextureButton" parent="FSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 0.0
margin/right = 84.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant2" type="TextureButton" parent="FSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant3" type="TextureButton" parent="FSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 269.0
margin/top = 390.0
margin/right = 329.0
margin/bottom = 450.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="SSMarket" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 272.0
margin/top = 453.0
margin/right = 441.0
margin/bottom = 493.0
alignment = 0

[node name="Merchant0" type="TextureButton" parent="SSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 2.0
margin/right = 37.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant1" type="TextureButton" parent="SSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 42.0
margin/top = 2.0
margin/right = 82.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant2" type="TextureButton" parent="SSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 2.0
margin/right = 127.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant3" type="TextureButton" parent="SSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 2.0
margin/right = 172.0
margin/bottom = 42.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 793.0
margin/top = 413.0
margin/right = 853.0
margin/bottom = 473.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TSMarket" type="HBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 795.0
margin/top = 477.0
margin/right = 968.0
margin/bottom = 517.0
alignment = 0

[node name="Merchant0" type="TextureButton" parent="TSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = 1.0
margin/right = 38.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant1" type="TextureButton" parent="TSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 43.0
margin/top = 1.0
margin/right = 83.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant2" type="TextureButton" parent="TSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 1.0
margin/right = 128.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Merchant3" type="TextureButton" parent="TSMarket"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 1.0
margin/right = 173.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button3" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 169.0
margin/top = 258.0
margin/right = 209.0
margin/bottom = 298.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="bazaar" parent="CanvasLayer" instance=ExtResource( 12 )]

visibility/visible = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="FSMarket/Merchant0" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="FSMarket/Merchant1" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="FSMarket/Merchant2" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="FSMarket/Merchant3" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="SSMarket/Merchant0" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="SSMarket/Merchant1" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="SSMarket/Merchant2" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="SSMarket/Merchant3" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="TSMarket/Merchant0" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="TSMarket/Merchant1" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="TSMarket/Merchant2" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="TSMarket/Merchant3" to="." method="_on_Merchant_pressed"]

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]


